# albert-plugin-spotify

./: CMakeLists.txt  README.md  metadata.json  spotify.qrc
i18n/: spotify_de.ts  spotify_en.ts  spotify_es.ts  spotify_fr.ts  spotify_ja.ts  spotify_ko.ts  spotify_pt.ts  spotify_zh.ts
resources/: spotify.qrc
src/: api.cpp  api.h  configwidget.cpp  configwidget.h  configwidget.ui  handlers.cpp  handlers.h  items.cpp  items.h  plugin.cpp  plugin.h  spotify.cpp  spotify.h
